2014-11-13  Ivan Shmakov  <ivan@siamics.net>

	* net/shr.el (shr-parse-base): Handle <base href=""> correctly.
	(shr-expand-url): Expand absolute URLs correctly (bug#17958).

2014-11-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww): Add comment to clarify.

	* net/shr.el (shr-parse-image-data): Remove blocked bits from
	external SVG images.
	(shr-tag-object): Display images in <object> forms (bug#16244).
	(shr-tag-table): Also insert <objects> after the tables.

2014-11-13  Michael Albinus  <michael.albinus@gmx.de>

	* vc/vc-hg.el (vc-hg-state): Disable pager.  (Bug#18940)

2014-11-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-form-file): Fix version number.

2014-11-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-form-file): :type isn't a valid `defface' keyword.

2014-11-10  Kenjiro NAKAYAMA  <nakayamakenjiro@gmail.com>

        * net/eww.el(eww-form-file(defface)): New defface of file upload form.
        (eww-submit-file): New key map of file upload.
        (eww-form-file): New file upload button and file name context.
        (eww-select-file): Select file and display selected file name.
        (eww-tag-input): Handle input tag of file type.
        (eww-update-field): Add point offset.
        (eww-submit): Add submit with multipart/form-data.

2014-11-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-render, eww-display-html, eww-setup-buffer):
	Allow taking a buffer to render data in.  This allows using several
	eww buffers (bug#16211).

2014-11-10  Charles Rendleman  <carendle@gmail.com>  (tiny change)

	* net/eww.el (eww-download-callback): Save only the file contents,
	not the headers.

2014-11-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-data): New plist to store all the data relevant
	to a single page, used throughout the file instead of the
	variables `eww-current-url', `eww-current-dom',
	`eww-current-source', and `eww-current-title'.